[project]
name = "fmussi-niveristand-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Fabio Mussi",email = "fabio.mussi@ni.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "niveristand (>=3.2.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
